Verify hmac via fixed key set by property. Change styling for .published-for to avoid overlap. Don't use service worker when unsupported.

--- a/core-bc/modules/portlet/src/main/javascript/app/view/user/ifeed/ifeed.component.css
+++ b/core-bc/modules/portlet/src/main/javascript/app/view/user/ifeed/ifeed.component.css
@@ -18,8 +18,6 @@ iframe {
 
 .published-for {
     font-size: .8em;
-    color: #777;
-    margin-top: 2px;
-    position: absolute;
-    margin-left: 15px;
+    color: #888;
+    margin: 2px 0 -15px 15px;
 }
